wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_multiple_errors.stderr
error: enum variant is missing `category` attribute
 --> tests/derive_error_category/fail_multiple_errors.rs:6:5
  |
6 |     First,
  |     ^^^^^

error: enum variant is missing `category` attribute
 --> tests/derive_error_category/fail_multiple_errors.rs:7:5
  |
7 |     Second,
  |     ^^^^^^
