wallet_core/wallet_common/wallet_common_macros/tests/derive_error_category/fail_multiple_errors.rs
use wallet_common::ErrorCategory;

#[derive(ErrorCategory)]
#[allow(dead_code)]
enum Error {
    First,
    Second,
}

fn main() {}
